k8s/keycloak/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
  labels:
    app: keycloak
    tier: auth
    environment: dev
