k8s/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
    tier: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
        tier: auth
        access: internal
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:25.0
          args:
            - start-dev
          ports:
            - containerPort: 8080
              name: http

          volumeMounts:
            - name: kc-storage
              mountPath: /opt/keycloak/data

          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /realms/master
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"

      volumes:
        - name: kc-storage
          persistentVolumeClaim:
            claimName: keycloak-pvc
